feat: Configuração para deploy no Vercel
- Adicionado vercel.json com configurações otimizadas
- Criado next.config.js com configurações para produção
- Adicionado .vercelignore para otimizar build
- Atualizado package.json com informações do projeto
- Criado README.md completo com documentação
- Configurado para usar SSR no Vercel (sem export estático)
- Adicionadas variáveis de ambiente para produção

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "grafica-cidades-seo",
+  "name": "pachego-fretes",
   "version": "1.0.0",
+  "description": "Calculadora de frete online e sistema administrativo para Pá-chego Fretes",
+  "author": "Bruno Stersa",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
