--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "critters": "^0.0.23",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0"
   }
 }
