--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "critters": "^0.0.23",
+    "firebase": "^12.3.0",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
